<resources>
    <string name="SELECTED_DIALOG_TYPE_LOCAL_VIDEO">从手机相册选择</string>
    <string name="SELECTED_DIALOG_TYPE_RECORDING">拍摄</string>
    <string name="__picker_all_image">All Images</string>
    <string name="__picker_all_image_and_video">All Images&amp;Videos</string>
    <string name="__picker_all_video">All Videos</string>
    <string name="__picker_cancel">Cancel</string>
    <string name="__picker_done">Done</string>
    <string name="__picker_done_with_count">Done(%1$d/%2$d)</string>
    <string name="__picker_full_size">Full Size</string>
    <string name="__picker_image_count">%1$d</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_need_camera_permission">Need Camera permission</string>
    <string name="__picker_need_storage_permission">Need Storage permission</string>
    <string name="__picker_over_max_count_tips">You can only select %1$d images</string>
    <string name="__picker_title">Images</string>
    <string name="__picker_title_video">Videos</string>
    <string name="__picker_unknown_error">Something error</string>
    <string name="__picker_yes">Yes</string>
    <string name="abc">哈哈 %s</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_description">Alert</string>
    <string name="app_name">Keeta Rider</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_homepage">返回</string>
    <string name="base_common_capture_refused">摄像头未找到或拍照权限被禁止，请查看设置并重试</string>
    <string name="bluetooth_advertise_permission_body">用于提高定位准确性，建议开启</string>
    <string name="bluetooth_advertise_permission_title">蓝牙广播权限使用说明</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_description">Button</string>
    <string name="camera_permission_body">骑行护航戴盔检测，建议开启</string>
    <string name="camera_permission_title">摄像头权限使用说明</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_network_then_click_for_retry">请检查网络后点击重新加载</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commonui_dialog_layout_message">内容居左，建议是完整的句子，内容内容内容内容内容内容内容</string>
    <string name="commonui_dialog_layout_negative_button">右操作按钮</string>
    <string name="commonui_dialog_layout_positive_button">左操作按钮</string>
    <string name="commonui_editext_anonymous">匿名</string>
    <string name="commonui_editext_anonymoused">已匿名</string>
    <string name="commonui_editext_comment">评论</string>
    <string name="commonui_editext_hint">请写下您的文案</string>
    <string name="commonui_editext_left_behind_hint">还差五个字</string>
    <string name="commonui_editext_outside_warning">警告外面</string>
    <string name="commonui_editext_pay_hint">询问服务员后输入</string>
    <string name="commonui_editext_pay_title">消费总额：</string>
    <string name="commonui_editext_right_below_hint">您的文案</string>
    <string name="commonui_editext_title">文案:</string>
    <string name="commonui_editext_warning">警告</string>
    <string name="commonui_empty_page_check_network_settings_please">请检查网络设置或稍后重试</string>
    <string name="commonui_empty_page_network_error">无法连接到网络</string>
    <string name="commonui_empty_page_retry">重试</string>
    <string name="commonui_range_seek_bar_title">标题</string>
    <string name="commonutil_aftertomorrow">后天</string>
    <string name="commonutil_complete">完成</string>
    <string name="commonutil_confirm">确定</string>
    <string name="commonutil_data_loading">加载中…</string>
    <string name="commonutil_day">日</string>
    <string name="commonutil_friday">五</string>
    <string name="commonutil_hour">时</string>
    <string name="commonutil_hr">小时</string>
    <string name="commonutil_min">分钟</string>
    <string name="commonutil_minute">分</string>
    <string name="commonutil_monday">一</string>
    <string name="commonutil_month">月</string>
    <string name="commonutil_noupdatelasttime">上次没有更新</string>
    <string name="commonutil_saturday">六</string>
    <string name="commonutil_second">秒</string>
    <string name="commonutil_sunday">天</string>
    <string name="commonutil_thursday">四</string>
    <string name="commonutil_today">今天</string>
    <string name="commonutil_tomorrow">明天</string>
    <string name="commonutil_tuesday">二</string>
    <string name="commonutil_wednesday">三</string>
    <string name="commonutil_week">星期</string>
    <string name="commonutil_year">年</string>
    <string name="commonutil_yesterday">昨天</string>
    <string name="commonutil_zhou">周</string>
    <string name="complete">完成</string>
    <string name="copy_result">复制完整诊断结果</string>
    <string name="data_loading">加载中…</string>
    <string name="default_web_client_id">901953567273-jjsrm5npinrf50j8r8fccllooo91rqpf.apps.googleusercontent.com</string>
    <string name="dev_accept_check">一键验收工具</string>
    <string name="dev_activity_notfound">页面没找到</string>
    <string name="dev_arbiter_log">打开arbiter调试开关</string>
    <string name="dev_cab_debug">进入美团打车开发者页面</string>
    <string name="dev_cab_setting">美团打车业务设置</string>
    <string name="dev_change_i_url">切换i版Host</string>
    <string name="dev_city_mingwangxing">切换城市到冥王星</string>
    <string name="dev_common_setting">通用设置</string>
    <string name="dev_config_new_ab">新版ABTest实验(添加、获取策略)</string>
    <string name="dev_cs_setting">服务体验平台业务设置</string>
    <string name="dev_cs_switch_env">环境切换</string>
    <string name="dev_custom_location_debug">自定义位置开关</string>
    <string name="dev_custom_location_edit">自编辑位置</string>
    <string name="dev_custom_location_select">地图选择位置</string>
    <string name="dev_custom_location_setting">自定义位置设置</string>
    <string name="dev_daozong_setting">到店综合业务设置</string>
    <string name="dev_dianping_mock">进入点评Mock设置页面</string>
    <string name="hint_phone">手机号码或邮箱</string>
    <string name="netDiagnostic">诊断工具</string>
    <string name="passport_help_default_from_key_btn_content">设置</string>
    <string name="passport_help_default_from_key_et_content">客服默认 from key</string>
    <string name="passport_login_label_bind_mobile_phone">bind_mobile_phone</string>
    <string name="passport_login_label_business_pre_check">business_pre_check</string>
    <string name="passport_login_label_email_login">email_login</string>
    <string name="passport_login_label_email_login_verify">email_login_verify</string>
    <string name="passport_login_label_email_register">email_register</string>
    <string name="passport_login_label_email_register_verify">email_register_verify</string>
    <string name="passport_login_label_mobile_phone_verify">mobile_phone_verify</string>
    <string name="passport_login_label_oauth_register">oauth_register</string>
    <string name="passport_login_label_oauth_register_verify">oauth_register_verify</string>
    <string name="passport_login_label_pre_check">pre_check</string>
    <string name="passport_user_type_switch_btn_content">用户类型切换</string>
    <string name="retry_button">重新诊断</string>
    <string name="show_detail">显示详情</string>
    <string name="start_diagnostic">开始诊断</string>
    <string name="user_contact">联系方式</string>
</resources>