<?xml version="1.0" encoding="utf-8"?>
<com.sankuai.meituan.navigation.NavViewGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:startDestination="@+id/pre_check">
    <fragment
        android:label="@string/passport_login_label_pre_check"
        android:name="com.meituan.passport.oversea.login.fragment.PreCheckFragment"
        android:id="@+id/pre_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_business_pre_check"
        android:name="com.meituan.passport.oversea.login.fragment.BusinessPreCheckFragment"
        android:id="@+id/business_pre_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_email_login"
        android:name="com.meituan.passport.oversea.login.fragment.EmailLoginFragment"
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_email_register"
        android:name="com.meituan.passport.oversea.login.fragment.EmailRegisterFragment"
        android:id="@+id/email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_email_register_verify"
        android:name="com.meituan.passport.oversea.login.fragment.EmailRegisterVerifyFragment"
        android:id="@+id/email_register_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_email_login_verify"
        android:name="com.meituan.passport.oversea.login.fragment.EmailLoginVerifyFragment"
        android:id="@+id/email_login_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_bind_mobile_phone"
        android:name="com.meituan.passport.oversea.login.fragment.BindMobilePhoneFragment"
        android:id="@+id/bind_mobile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_mobile_phone_verify"
        android:name="com.meituan.passport.oversea.login.fragment.MobilePhoneVerifyFragment"
        android:id="@+id/mobile_phone_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_oauth_register"
        android:name="com.meituan.passport.oversea.login.fragment.AgencyFragment"
        android:id="@+id/oauth_register"
        android:tag="com.meituan.passport.oversea.fragments.OauthRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:label="@string/passport_login_label_oauth_register_verify"
        android:name="com.meituan.passport.oversea.login.fragment.AgencyFragment"
        android:id="@+id/oauth_register_verify"
        android:tag="com.meituan.passport.oversea.fragments.OauthRegisterVerifyFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</com.sankuai.meituan.navigation.NavViewGroup>
