<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#edefed"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diagnostic_title_height"
        android:layout_marginBottom="@dimen/diagnostic_margin_height">
        <RelativeLayout
            android:gravity="center_vertical"
            android:id="@+id/left_back_title_bar"
            android:paddingLeft="@dimen/diagnostic_left_back_padding_left"
            android:paddingTop="@dimen/diagnostic_left_back_padding_top_bottom"
            android:paddingBottom="@dimen/diagnostic_left_back_padding_top_bottom"
            android:layout_width="@dimen/left_back_title_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/back_homepage">
            <ImageView
                android:focusable="false"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:src="@drawable/diagnostic_arrow_back_black"
                android:layout_alignParentLeft="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="17sp"
                android:textColor="#100e0e"
                android:gravity="center"
                android:id="@+id/tv_title_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netDiagnostic"
                android:singleLine="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:textSize="@dimen/diagnostic_contact_text_size"
            android:textStyle="bold"
            android:textColor="#3d322b"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:text="@string/user_contact"/>
        <EditText
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/userNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="35dp"
            android:hint="@string/hint_phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/diagnostic_margin_height"
        android:layout_weight="11">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <Button
            android:textSize="@dimen/diagnostic_button_text_size"
            android:id="@+id/startOrCancelBtn"
            android:background="@drawable/diagnostic_orange_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/diagnostic_button_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/start_diagnostic"
            android:layout_centerInParent="true"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:textSize="@dimen/diagnostic_button_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/showOrHide"
                android:background="@drawable/diagnostic_orange_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/diagnostic_button_height"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/show_detail"
                android:layout_weight="1"/>
            <Button
                android:textSize="@dimen/diagnostic_button_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/retry"
                android:background="@drawable/diagnostic_orange_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/diagnostic_button_height"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/retry_button"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:textSize="@dimen/diagnostic_button_text_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/copyResult"
        android:background="@drawable/diagnostic_orange_button"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/copy_result"
        android:layout_weight="1"/>
</LinearLayout>
