<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#f3f3f3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:background="@color/white"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/passport_back"
            android:layout_marginStart="12dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#222222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="海外账号测试工具"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="环境切换"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="强制切换到【测试】环境"
                android:layout_weight="1"/>
            <Switch
                android:id="@+id/sw_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="功能"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_login"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="进入登录页"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_positive_logout"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_positive_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="主动退登"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_negative_logout"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_negative_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="被动退登"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_40x"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_40x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40x 弹窗"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_show_third"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_show_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="强制【关闭】三方登录(废弃)"
                android:layout_weight="1"/>
            <Switch
                android:id="@+id/tv_passport_show_third_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_third_switch"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_third_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="三方登录展示状态切换"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_user_type_switch"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_user_type_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passport_user_type_switch_btn_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_tv_passport_privacy"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/tv_passport_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="国内版—必须同意隐私政策"
                android:layout_weight="1"/>
            <Switch
                android:id="@+id/tv_passport_privacy_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_passport_help_default_from_key"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <EditText
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/et_passport_help_default_from_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/passport_help_default_from_key_et_content"
                android:layout_weight="1"/>
            <Button
                android:textSize="15dp"
                android:textColor="#333333"
                android:id="@+id/btn_passport_help_default_from_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/passport_help_default_from_key_btn_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
